add comment to assignment 2

--- a/compose-assignment-2/answer/Dockerfile
+++ b/compose-assignment-2/answer/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     git \
     && rm -rf /var/lib/apt/lists/*
-
+#rm line clears apt-get cache
 WORKDIR /var/www/html/themes
 
 RUN git clone --branch 8.x-4.x --single-branch --depth 1 https://git.drupalcode.org/project/bootstrap.git \
